; ModuleID = '/home/carl/AnghaBench/h2o/t/00unit/lib/handler/extr_mimemap.c_test_dynamic.c'
source_filename = "/home/carl/AnghaBench/h2o/t/00unit/lib/handler/extr_mimemap.c_test_dynamic.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32* }

@.str = private unnamed_addr constant [5 x i8] c".php\00", align 1
@__const.test_dynamic.exts = private unnamed_addr constant [2 x i8*] [i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i32 0, i32 0), i8* null], align 16
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_dynamic to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_dynamic() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca [2 x i8*], align 16
  %3 = alloca %struct.TYPE_3__, align 8
  %4 = call i32* (...) @h2o_mimemap_create()
  store i32* %4, i32** %1, align 8
  %5 = bitcast [2 x i8*]* %2 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 16 %5, i8* align 16 bitcast ([2 x i8*]* @__const.test_dynamic.exts to i8*), i64 16, i1 false)
  %6 = bitcast %struct.TYPE_3__* %3 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 8 %6, i8 0, i64 8, i1 false)
  %7 = load i32*, i32** %1, align 8
  %8 = getelementptr inbounds [2 x i8*], [2 x i8*]* %2, i64 0, i64 0
  %9 = call i32 @h2o_mimemap_define_dynamic(i32* %7, i8** %8, %struct.TYPE_3__* %3)
  %10 = load i32*, i32** %1, align 8
  %11 = call i32 @h2o_mem_release_shared(i32* %10)
  ret void
}

declare dso_local i32* @h2o_mimemap_create(...) #1

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #2

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #2

declare dso_local i32 @h2o_mimemap_define_dynamic(i32*, i8**, %struct.TYPE_3__*) #1

declare dso_local i32 @h2o_mem_release_shared(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
